--- a/index.html
+++ b/index.html
@@ -21,5 +21,25 @@
             document.getElementById("desc").innerHTML = "You have <u>0</u> bitches";
         }
         </script>
+        
+        <button id="nice" onclick="founction()">IQ Calculator (Joke)</button>
+        
+
+        <p id="desc"></p>
+
+        <script>
+        function founction() { 
+            var iq =  Math.round(Math.random() * 150);
+            document.getElementById("nice").innerHTML = "Your IQ is : " + iq;
+            if (iq < 50) {
+                document.getElementById("desc").innerHTML = "Wow, only " + iq + "? Unfortunate." ;
+            } else if (iq < 100) {
+                document.getElementById("desc").innerHTML = "Painfully average " + iq + "." ;
+            } else if (iq < 150) {
+                document.getElementById("desc").innerHTML = "Congrats, you have an IQ of " + iq + "! You must be pretty smart!" ;
+            }
+            //document.body.style.backgroundColor = "#" + Math.floor(Math.random()*16777215).toString(16);
+        }
+        </script>
     </body>
 </html>
