--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
         <button id="nice" onclick="founction()">IQ Calculator (Joke)</button>
         
         <h1 id="desc"></h1>
-
-        <button id="pog" onclick="changebackground()">Change Background Color</button>
         <br>
         <br>
         <br>
@@ -41,12 +39,13 @@
             document.body.style.backgroundColor = "#" + Math.floor(Math.random()*16777215).toString(16);
         }
 
-        function displaytext() {
-            document.getElementById("pepega").innerHTML = document.getElementById("funtext").value;
-        }
         </script>
-        <div></div>
+        <br>
 
         <a href="htmleditor.html">Online HTML Editor</a>
+
+        <div id="bkground" style="bottom: 0; position: fixed; right: 0; left: 0;">        
+            <button id="pog" onclick="changebackground()">Change Background Color</button>
+        </div>
     </body>
 </html>
