--- a/index.html
+++ b/index.html
@@ -38,15 +38,17 @@
             </td>
         </tr>
         <tr>
-            <td>
-                <p style="font-family: 'Courier New', Courier, monospace; color: #228CDB;"><b>
-                    Random Wikipedia Article</b></p>
-                <iframe src="https://en.wikipedia.org/wiki/Special:Random;" 
-                style="width: 650px; height: 500px;"></iframe> 
-            </td>
+            <td><a href="htmleditor.html">Online HTML Editor</a></td>
         </tr>
         <tr>
-            <td><a href="htmleditor.html">Online HTML Editor</a></td>
+            <td><a href="https://nehaltangudu12.github.io/pomogame/">ReactJS Pomodoro Timer</a></td>
+        </tr>
+        <tr>
+            <td>
+                <p style="font-family: 'Courier New', Courier, monospace; color: #228CDB;"><b>
+                        Random Wikipedia Article</b></p>
+                <iframe src="https://en.wikipedia.org/wiki/Special:Random;" style="width: 650px; height: 500px;"></iframe>
+            </td>
         </tr>
         </table>
         
